imported pandas and created dataframes

--- a/Call Center Cleanup.ipynb
+++ b/Call Center Cleanup.ipynb
@@ -39,15 +39,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "49aada97",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import the appropriate libraries\n",
+    "import pandas as pd\n",
     "\n",
-    "\n",
-    "# Create two new dataframes"
+    "# Create two new dataframes\n",
+    "north_df = pd.read_csv('NorthCallCenter.csv')\n",
+    "south_df = pd.read_csv('SouthCallCenter.csv')"
    ]
   },
   {
@@ -323,7 +325,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -337,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
